--- a/templates/landing.html
+++ b/templates/landing.html
@@ -374,8 +374,7 @@
                     <h1>Master Your Interviews with AI and Get Hyred!</h1>
                     <p class="subtitle">Prepare, practice, and perfect your interview skills with our cutting-edge AI Interview Assistant. Get personalized feedback and improve your chances of landing your dream job.</p>
                     <a href="#" class="cta-button">Sign Up for Beta</a>
-                    <a href="{{ url_for('index') }}" class="secondary-button">Login</a>
-
+                    <a href="{{ url_for('index') }}" class="secondary-button nav-login-btn">Login</a>
                 </div>
                 <div class="hero-image">
                     <img src="https://raw.githubusercontent.com/thevoxium/prepper-web/refs/heads/main/static/image.webp" alt="AI Interview Assistant" />
